# unicodeit.rs

./: .gitignore  Cargo.toml  Justfile  LICENSE.md  README.md  lefthook.yml  regen.py  release.py
benches/: basic.rs
cli/: Cargo.toml
cli/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_naive_vs_optimized.rs
src/: data.rs  data_test.rs  lib.rs  naive_replace.rs  optimized_replace.rs  replace.rs
tests/: simple.rs  subsuper.rs  v06symbols.rs
tests/common/: mod.rs
