[package]
name = "unicodeit-cli"
description = "The command line interface to unicodeit"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
# TODO: Is clap truly necessary for this?
clap = { version = "4.5", features = ["cargo"] }
unicodeit = { path = "..", version = "0.2.0" }

[[bin]]
name = "unicodeit"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/unicodeit-{version}-{ target }"
pkg-fmt = "bin"
