[package]
name = "unicodeit-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.unicodeit]
path = ".."
features = ["naive-impl", "optimized-impl"]

[[bin]]
name = "fuzz_naive_vs_optimized"
path = "fuzz_targets/fuzz_naive_vs_optimized.rs"
test = false
doc = false
bench = false
